使用javaFX进行重构